# presearch-core

./: BUILD.gn  DEPS  Jenkinsfile  README.md  components-embedder_support-android-java-src-org-chromium-components-embedder_support-util-UrlConstants.java.patch  package-lock.json  package.json  presearch_paks.gni  presearch_repack_locales.gni  tsconfig-lint.json  tsconfig-webpack.json  version.version
android/: BUILD.gn  presearch_java_resources.gni  presearch_java_sources.gni
android/java/: AndroidManifest.xml  apk_for_test.flags  proguard.flags
android/javatests/: AndroidManifest.xml
app/: BUILD.gn  DEPS  bookmarks_strings.grdp  extensions_strings.grdp  extensions_strings_override.grdp  generated_resources.grd  generated_resources_override.grd  media_router_strings.grdp  nearby_share_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  presearch_command_ids.h  presearch_command_line_helper.cc  presearch_command_line_helper.h  presearch_command_line_helper_unittest.cc  presearch_exe.rc  presearch_exe.ver  presearch_generated_resources.grd  presearch_main_delegate.cc  presearch_main_delegate.h  presearch_main_delegate_browsertest.cc  presearch_main_delegate_runtime_flags_browsertest.cc  presearch_strings.grd  presearch_strings_override.grd  printing_strings.grdp  settings_presearch_strings.grdp  settings_presearch_strings_override.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp  shared_settings_strings_override.grdp  supervised_user_error_page_strings.grdp  vr_strings.grdp
app/android/: BUILD.gn
app/linux/: BUILD.gn
app/mac/: BUILD.gn
app/resources/: chromium_strings_af.xtb  chromium_strings_am.xtb  chromium_strings_ar.xtb  chromium_strings_as.xtb  chromium_strings_az.xtb  chromium_strings_be.xtb  chromium_strings_bg.xtb  chromium_strings_bn.xtb  chromium_strings_bs.xtb  chromium_strings_ca.xtb  chromium_strings_cs.xtb  chromium_strings_da.xtb  chromium_strings_de.xtb  chromium_strings_el.xtb  chromium_strings_en-GB.xtb  chromium_strings_es-419.xtb  chromium_strings_es.xtb  chromium_strings_et.xtb  chromium_strings_eu.xtb  chromium_strings_fa.xtb  chromium_strings_fi.xtb  chromium_strings_fil.xtb  chromium_strings_fr-CA.xtb  chromium_strings_fr.xtb  chromium_strings_gl.xtb  chromium_strings_gu.xtb  chromium_strings_hi.xtb  chromium_strings_hr.xtb  chromium_strings_hu.xtb  chromium_strings_hy.xtb  chromium_strings_id.xtb  chromium_strings_is.xtb  chromium_strings_it.xtb  chromium_strings_iw.xtb  chromium_strings_ja.xtb  chromium_strings_ka.xtb  chromium_strings_kk.xtb  chromium_strings_km.xtb  chromium_strings_kn.xtb  chromium_strings_ko.xtb  (+173 more)
app/theme/: BUILD.gn  presearch_theme_resources.grd  presearch_unscaled_resources.grd
app/vector_icons/: BUILD.gn  vector_icons.cc.template  vector_icons.h.template
app/win/: BUILD.gn
browser/: BUILD.gn  DEPS  browser_context_keyed_service_factories.cc  browser_context_keyed_service_factories.h  presearch_browser_main_extra_parts.cc  presearch_browser_main_extra_parts.h  presearch_browser_main_loop.cc  presearch_browser_main_loop.h  presearch_browser_main_parts.cc  presearch_browser_main_parts.h  presearch_browser_main_parts_mac.h  presearch_browser_main_parts_mac.mm  presearch_browser_process.h  presearch_browser_process_impl.cc  presearch_browser_process_impl.h  presearch_content_browser_client.cc  presearch_content_browser_client.h  presearch_content_browser_client_browsertest.cc  presearch_content_browser_client_unittest.cc  presearch_drm_tab_helper.cc  presearch_drm_tab_helper.h  presearch_local_state_prefs.cc  presearch_local_state_prefs.h  presearch_prefs_browsertest.cc  presearch_profile_prefs.cc  presearch_profile_prefs.h  presearch_resources_browsertest.cc  presearch_resources_util_unittest.cc  presearch_scheme_load_browsertest.cc  presearch_tab_helpers.cc  presearch_tab_helpers.h  sources.gni  update_util.cc  update_util.h  version_info.cc  version_info.h
browser/android/: BUILD.gn  presearch_feature_list.cc  presearch_relaunch_utils.cc  presearch_shields_content_settings.cc  presearch_shields_content_settings.h  presearch_stats_updater_android.cc  presearch_sync_worker.cc  presearch_sync_worker.h
browser/autocomplete/: presearch_autocomplete_scheme_classifier.cc  presearch_autocomplete_scheme_classifier.h  sources.gni
browser/autoplay/: BUILD.gn  autoplay_browsertest.cc
browser/binance/: binance_protocol_handler.cc  binance_protocol_handler.h  binance_service_factory.cc  binance_service_factory.h  sources.gni
browser/browsing_data/: BUILD.gn  presearch_browsing_data_remover_delegate.cc  presearch_browsing_data_remover_delegate.h  presearch_browsing_data_remover_delegate_unittest.cc  presearch_clear_browsing_data.cc  presearch_clear_browsing_data.h  presearch_clear_browsing_data_browsertest.cc
common/: BUILD.gn  DEPS  common_message_generator.cc  common_message_generator.h  network_constants.cc  network_constants.h  pref_names.cc  pref_names.h  presearch_channel_info.cc  presearch_channel_info.h  presearch_channel_info_browsertest.cc  presearch_channel_info_posix.cc  presearch_channel_info_posix.h  presearch_channel_info_unittest.cc  presearch_constants.cc  presearch_constants.h  presearch_content_client.cc  presearch_content_client.h  presearch_content_client_unittest.cc  presearch_features.cc  presearch_features.h  presearch_paths.cc  presearch_paths.h  presearch_renderer_configuration.mojom  presearch_switches.cc  presearch_switches.h  render_messages.h  resource_bundle_helper.cc  resource_bundle_helper.h  translate_network_constants.cc  translate_network_constants.h  url_constants.cc  url_constants.h  webui_url_constants.cc  webui_url_constants.h
content/: BUILD.gn
net/: sources.gni
renderer/: BUILD.gn  DEPS  presearch_content_renderer_client.cc  presearch_content_renderer_client.h  presearch_render_thread_observer.cc  presearch_render_thread_observer.h  sources.gni
test/: BUILD.gn  DEPS  testing.gni
utility/: BUILD.gn  DEPS  presearch_content_utility_client.cc  presearch_content_utility_client.h  sources.gni
(+4254 files in other folders)
